--- a/mais-apoio/package.json
+++ b/mais-apoio/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.4.2",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
     "web-vitals": "^2.1.4"
