--- a/MaisApoio/MaisApoio.csproj
+++ b/MaisApoio/MaisApoio.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Neo4j.Driver" Version="5.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="System.Net.Mail" Version="1.0.0-rtm-00002" />
   </ItemGroup>
 
 </Project>
