--- a/mais-apoio/package.json
+++ b/mais-apoio/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.4.2",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
+    "react-timer-hook": "^3.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
