--- a/mais-apoio/package.json
+++ b/mais-apoio/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.4.2",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
     "react-timer-hook": "^3.0.8",
