--- a/mais-apoio/public/manifest.json
+++ b/mais-apoio/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "+Apoio",
+  "name": "Instalar +Apoio",
   "icons": [
     {
       "src": "favicon.ico",
