--- a/MaisApoio/MaisApoio.csproj
+++ b/MaisApoio/MaisApoio.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.68.0.3601" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Neo4j.Driver" Version="5.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
