--- a/mais-apoio/.gitignore
+++ b/mais-apoio/.gitignore
@@ -1,23 +1,74 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Node.js
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
+# React build
 /build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# React cache e outros arquivos desnecessários
+.cache/
+.vscode/
+.idea/
+*.log
+*.tmp
+*.bak
+*.swp
 
+# .env files
+.env
+.env.*.local
+
+# Coverage e relatórios de testes
+/coverage
+/lcov-report
+
+# Editor e sistema operacional
+.DS_Store
+Thumbs.db
+
+# npm / Yarn
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Arquivos de lock temporários
+package-lock.json
+yarn.lock
+
+# Windows
+*.lnk
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.user
+*.vs/
+
+# C# / .NET
+bin/
+obj/
+*.dll
+*.exe
+*.pdb
+*.cache
+*.nuget
+*.dbmdl
+*.log
+*.zip
+
+# Configurações de IDE e arquivos temporários
+.vscode/
+.idea/
+*.csproj.user
+*.userprefs
+*.resharper
+*.gitattributes
+
+# Logs do sistema
+*.stackdump
+*.pid
+
+# Publicação / Deploy
+.publish/
+out/
