--- a/mais-apoio/package.json
+++ b/mais-apoio/package.json
@@ -19,6 +19,7 @@
     "react-number-format": "^5.4.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "react-swipeable": "^7.0.1",
     "react-timer-hook": "^3.0.8",
     "react-toastify": "^10.0.6",
